Base angular app

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -2,6 +2,6 @@ doctype html
 html
   head
     title Selectel. Test task.
+  body(ng-app="app")
+    ui-view
     script(src='./app.js')
-  body
-    h1 Hello, world!
