--- a/src/components/page/page.pug
+++ b/src/components/page/page.pug
@@ -1,6 +1,7 @@
-h1 Погода
-form(ng-submit='$ctrl.search()')
+h1.title Погода
+
+form.search(ng-submit='$ctrl.search()')
   input(ng-model='$ctrl.city')
-  button Search
+  button Поиск
 
 ui-view
