--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title Selectel. Test task.
-  body(ng-app="app")
+    link(href='/assets/weather-icons.min.css')
+    link(href='/assets/weather-icons-wind.min.css')
+  body(ng-app='app')
     ui-view
     script(src='./app.js')
