--- a/src/components/weather-item/weather-item.pug
+++ b/src/components/weather-item/weather-item.pug
@@ -1,12 +1,19 @@
-div Дата: {{$ctrl.dt2date($ctrl.data.dt)}}
+.weather-item
 
-div Дневная температура: {{$ctrl.data.temp.day}}
-div Ночная температура : {{$ctrl.data.temp.night}}
+  .block.left
+    .date {{$ctrl.dt2date($ctrl.data.dt)}}
 
-div Давление : {{$ctrl.pa2merc($ctrl.data.pressure)}} мм рт. ст.
-div Влажность: {{$ctrl.data.humidity}}%
+    .temp
+      span.daily   {{$ctrl.data.temp.day}} °C
+      |  / 
+      span.nightly {{$ctrl.data.temp.night}} °C
 
-div Скорость ветра: {{$ctrl.data.speed}} м/с
-div Направление ветра: {{$ctrl.data.deg}}
+  .block.center
+    div Давление: {{$ctrl.pa2merc($ctrl.data.pressure)}} мм рт. ст.
+    div Влажность: {{$ctrl.data.humidity}}%
+    div Облачность: {{$ctrl.clouds}}%
 
-div Облачность: {{$ctrl.clouds}}%
+  .block.right
+    div Скорость ветра: {{$ctrl.data.speed}} м/с
+    div Направление ветра: {{$ctrl.data.deg}}°
+
