--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,77 @@
-body {
-  background: green;
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+// 404
+.back-link {
+  text-align: center;
+  font-size: 20px;
+}
+
+// Page
+.title {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.search {
+  text-align: center;
+
+  input, button {
+    font-size: 25px;
+  }
+}
+
+// City
+.sort {
+  text-align: center;
+  font-size: 20px;
+
+  select {
+    font-size: 20px;
+  }
+}
+
+.list {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+
+  .item {
+    margin: 0 auto;
+    padding: 0;
+    border: 1px solid black;
+    width: 600px;
+
+    &:not(:last-child) {
+      border-bottom: 0;
+    }
+  }
+}
+
+.weather-item {
+  .date {
+    font-size: 25px;
+
+  }
+
+  .block {
+    box-sizing: border-box;
+    display: inline-block;
+    margin: 5px;
+    vertical-align: top;
+    width: 190px;
+  }
+
+  .left {
+    text-align: center;
+  }
+
+  .center {
+  }
+
+  .right {
+  }
 }
