Fix charset for index.html

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
     title Selectel. Test task.
     link(href='/assets/weather-icons.min.css')
     link(href='/assets/weather-icons-wind.min.css')
