Fix show cloud percent value

--- a/src/components/weather-item/weather-item.pug
+++ b/src/components/weather-item/weather-item.pug
@@ -11,7 +11,7 @@
   .block.center
     div Давление: {{$ctrl.pa2merc($ctrl.data.pressure)}} мм рт. ст.
     div Влажность: {{$ctrl.data.humidity}}%
-    div Облачность: {{$ctrl.clouds}}%
+    div Облачность: {{$ctrl.data.clouds}}%
 
   .block.right
     div Скорость ветра: {{$ctrl.data.speed}} м/с
